objects/Mail__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include Insurance?</description>
    <label>Insurance?</label>
    <type>Checkbox</type>
</CustomField>