objects/Mail__c/fields/Lost_or_Missing__c.field-meta.xml
<CustomField>
    <fullName>Lost_or_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lost or Missing?</label>
    <type>Checkbox</type>
</CustomField>