objects/Mail__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Choose a current transit status</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In_Transit</fullName>
                <label>In Transit</label>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Lost_or_Missing</fullName>
                <label>Lost or Missing</label>
            </value>
            <value>
                <fullName>Received_for_Processing</fullName>
                <label>Received for Processing</label>
            </value>
            <value>
                <fullName>Arrived at customs</fullName>
                <isActive>false</isActive>
                <label>Arrived at customs</label>
            </value>
            <value>
                <fullName>Arrived at the office of destination</fullName>
                <isActive>false</isActive>
                <label>Arrived at the office of destination</label>
            </value>
            <value>
                <fullName>Delivery attempt failed</fullName>
                <isActive>false</isActive>
                <label>Delivery attempt failed</label>
            </value>
            <value>
                <fullName>In transit - Arrived at the waypoint</fullName>
                <isActive>false</isActive>
                <label>In transit - Arrived at the waypoint</label>
            </value>
            <value>
                <fullName>Package accepted</fullName>
                <isActive>false</isActive>
                <label>Package accepted</label>
            </value>
            <value>
                <fullName>Package has left the office for delivery</fullName>
                <isActive>false</isActive>
                <label>Package has left the office for delivery</label>
            </value>
            <value>
                <fullName>Package in transit</fullName>
                <isActive>false</isActive>
                <label>Package in transit</label>
            </value>
            <value>
                <fullName>Package information received</fullName>
                <isActive>false</isActive>
                <label>Package information received</label>
            </value>
            <value>
                <fullName>Package is being prepared for delivery</fullName>
                <isActive>false</isActive>
                <label>Package is being prepared for delivery</label>
            </value>
            <value>
                <fullName>Package is ready for pick-up</fullName>
                <isActive>false</isActive>
                <label>Package is ready for pick-up</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>