objects/Mail__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>