objects/Mail__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Enter weight in ounces (oz)</description>
    <label>Weight</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>